tdf#56321 - .doc import image flipped status

Although LO was exporting whether an image was flipped
horizontally or vertically, it wasn't reading it in during
an import.

Change-Id: Ia85e3459d00f40d852bbcd3fcfe15e7b53d518ba